MD Settings: Input method: add show-in-shelf toggle

BUG=694928
CQ_INCLUDE_TRYBOTS=master.tryserver.chromium.linux:closure_compilation

Review-Url: https://codereview.chromium.org/2727693003
Cr-Commit-Position: refs/heads/master@{#454126}

Former-commit-id: c0e297639ffe51b7a3fc75fe96f9a1fb832a0ea1